--- a/index.html
+++ b/index.html
@@ -10,13 +10,9 @@
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Overpass+Mono:wght@300..700&family=Playwrite+CO+Guides&family=Space+Grotesk:wght@300..700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Tomorrow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <script
-      src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs"
-      type="module"
-    ></script>
     <style>
       html {
-        font-size: 30px;
+        font-size: 33px;
       }
       body {
         display: flex;
@@ -68,14 +64,14 @@
       /* Media query for screens with width or height less than 500px */
       @media screen and (max-width: 500px), screen and (max-height: 500px) {
         html {
-          font-size: 15px; /* Adjust font size */
+          font-size: 21px; /* Adjust font size */
         }
       }
 
       /* Media query for screens with width or height more than 1200px */
       @media screen and (min-width: 1200px), screen and (min-height: 1200px) {
         html {
-          font-size: 45px; /* Adjust font size */
+          font-size: 55px; /* Adjust font size */
         }
       }
     </style>
@@ -126,7 +122,6 @@
         `<div class="proverb">🛠️ A bad worker blames his tools. 🛠️</div><div class="source">Australian Proverb</div>`,
         `<div class="proverb">🤝 If you want to go fast, go alone. If you want to go far, go together. 🤝</div><div class="source">African Proverb</div>`,
         `<div class="proverb">📈 Fall seven times, stand up eight. 📈</div><div class="source">Japanese Proverb</div>`,
-
         `<div class="proverb">🌳 Wisdom is like a baobab tree; no one individual can embrace it. 🌳</div><div class="source">African Proverb</div>`,
         `<div class="proverb">🐦 The early bird catches the worm. 🐦</div><div class="source">English Proverb</div>`,
         `<div class="proverb">👣 A journey of a thousand miles begins with a single step. 👣</div><div class="source">Chinese Proverb</div>`,
@@ -163,6 +158,44 @@
         `<div class="proverb">⏳ If you wish to be rich, do not save money, but save time. ⏳</div><div class="source">Chinese Proverb</div>`,
         `<div class="proverb">🌲 You cannot hide a large tree under a small shrub. 🌿</div><div class="source">Indian Proverb</div>`,
         `<div class="proverb">💔 A broken heart is like a broken mirror. 💔</div><div class="source">Russian Proverb</div>`,
+        `<div class="proverb">🌌 The unexamined life is not worth living. 🌌</div><div class="source">Socrates</div>`,
+        `<div class="proverb">✨ In the middle of difficulty lies opportunity. ✨</div><div class="source">Albert Einstein</div>`,
+        `<div class="proverb">🌀 What you seek is seeking you. 🌀</div><div class="source">Rumi</div>`,
+        `<div class="proverb">🌠 Man is condemned to be free. 🌠</div><div class="source">Jean-Paul Sartre</div>`,
+        `<div class="proverb">💭 Happiness depends upon ourselves. 💭</div><div class="source">Aristotle</div>`,
+        `<div class="proverb">🕰️ It is not length of life, but depth of life. 🕰️</div><div class="source">Ralph Waldo Emerson</div>`,
+        `<div class="proverb">🌿 You must be the change you wish to see in the world. 🌿</div><div class="source">Mahatma Gandhi</div>`,
+        `<div class="proverb">🔥 He who has a why to live can bear almost any how. 🔥</div><div class="source">Friedrich Nietzsche</div>`,
+        `<div class="proverb">🔮 No one can make you feel inferior without your consent. 🔮</div><div class="source">Eleanor Roosevelt</div>`,
+        `<div class="proverb">🌊 Do not dwell in the past, do not dream of the future, concentrate the mind on the present moment. 🌊</div><div class="source">Buddha</div>`,
+        `<div class="proverb">🌟 To live is the rarest thing in the world. Most people exist, that is all. 🌟</div><div class="source">Oscar Wilde</div>`,
+        `<div class="proverb">🌏 Everything has beauty, but not everyone sees it. 🌏</div><div class="source">Confucius</div>`,
+        `<div class="proverb">🔗 The only way to deal with fear is to face it head-on. 🔗</div><div class="source">James Baldwin</div>`,
+        `<div class="proverb">🌅 When we are no longer able to change a situation, we are challenged to change ourselves. 🌅</div><div class="source">Viktor Frankl</div>`,
+        `<div class="proverb">🎨 Every man takes the limits of his own field of vision for the limits of the world. 🎨</div><div class="source">Arthur Schopenhauer</div>`,
+        `<div class="proverb">💎 The greatest glory in living lies not in never falling, but in rising every time we fall. 💎</div><div class="source">Nelson Mandela</div>`,
+        `<div class="proverb">🪞 Knowing yourself is the beginning of all wisdom. 🪞</div><div class="source">Aristotle</div>`,
+        `<div class="proverb">🌌 You cannot step twice into the same river, for other waters are continually flowing on. 🌌</div><div class="source">Heraclitus</div>`,
+        `<div class="proverb">🌺 Your task is not to seek for love, but merely to seek and find all the barriers within yourself that you have built against it. 🌺</div><div class="source">Rumi</div>`,
+        `<div class="proverb">🌳 The only true wisdom is in knowing you know nothing. 🌳</div><div class="source">Socrates</div>`,
+        `<div class="proverb">🌱 The privilege of a lifetime is to become who you truly are. 🌱</div><div class="source">Carl Jung</div>`,
+        `<div class="proverb">💡 The mind is everything. What you think you become. 💡</div><div class="source">Buddha</div>`,
+        `<div class="proverb">🔮 Change your thoughts and you change your world. 🔮</div><div class="source">Neville Goddard</div>`,
+        `<div class="proverb">🌪️ He who fights with monsters should be careful lest he thereby become a monster. 🌪️</div><div class="source">Friedrich Nietzsche</div>`,
+        `<div class="proverb">🌌 We are what we repeatedly do. Excellence, then, is not an act, but a habit. 🌌</div><div class="source">Aristotle</div>`,
+        `<div class="proverb">✨ The only thing necessary for the triumph of evil is for good men to do nothing. ✨</div><div class="source">Edmund Burke</div>`,
+        `<div class="proverb">🕰️ Life is what happens when you're busy making other plans. 🕰️</div><div class="source">John Lennon</div>`,
+        `<div class="proverb">💭 Your work is going to fill a large part of your life, and the only way to be truly satisfied is to do what you believe is great work. 💭</div><div class="source">Steve Jobs</div>`,
+        `<div class="proverb">🔥 The journey of a thousand miles begins with one step. 🔥</div><div class="source">Lao Tzu</div>`,
+        `<div class="proverb">🌍 It does not matter how slowly you go as long as you do not stop. 🌍</div><div class="source">Confucius</div>`,
+        `<div class="proverb">🎯 It is never too late to be what you might have been. 🎯</div><div class="source">George Eliot</div>`,
+        `<div class="proverb">🌅 The only way to do great work is to love what you do. 🌅</div><div class="source">Steve Jobs</div>`,
+        `<div class="proverb">🌳 Not everything that is faced can be changed, but nothing can be changed until it is faced. 🌳</div><div class="source">James Baldwin</div>`,
+        `<div class="proverb">🌀 It is not the strongest of the species that survive, nor the most intelligent, but the one most responsive to change. 🌀</div><div class="source">Charles Darwin</div>`,
+        `<div class="proverb">🌠 The only thing we have to fear is fear itself. 🌠</div><div class="source">Franklin D. Roosevelt</div>`,
+        `<div class="proverb">🕊️ You must be the change you wish to see in the world. 🕊️</div><div class="source">Mahatma Gandhi</div>`,
+        `<div class="proverb">🌻 I am not what happened to me, I am what I choose to become. 🌻</div><div class="source">Carl Jung</div>`,
+        `<div class="proverb">🌍 Don't cry because it's over, smile because it happened. 🌍</div><div class="source">Dr. Seuss</div>`,
       ];
 
       function showRandomText() {
