--- a/index.html
+++ b/index.html
@@ -49,15 +49,16 @@
       }
       .source {
         font-size: 1rem;
-        margin-top: 2rem;
+        margin-top: 1rem;
       }
       .buttonsPlaceholder {
         display: flex;
         justify-content: center;
         align-items: center;
-        gap: 1rem;
+        gap: 0.3rem;
         position: fixed;
-        top: 1rem;
+        top: 0.3rem;
+        font-size: 0.5rem;
       }
       .button {
         padding: 0.2rem;
@@ -88,10 +89,17 @@
         }
       }
 
+      /* Media query for screens with width or height less than 500px */
+      @media screen and (max-height: 400px) {
+        html {
+          font-size: 17px; /* Adjust font size */
+        }
+      }
+
       /* Media query for screens with width or height more than 1200px */
       @media screen and (min-width: 1200px), screen and (min-height: 1200px) {
         html {
-          font-size: 55px; /* Adjust font size */
+          font-size: 45px; /* Adjust font size */
         }
       }
       .active {
